--- a/style.css
+++ b/style.css
@@ -400,6 +400,10 @@ button[onclick*="goToOptimization"]:hover {
     border: 4px solid #007bff;
     border-radius: 8px;
 }
+.speech-example{
+	font-size:24px;
+	
+}
 
 /* RWD 調整：當螢幕較窄時，切換回垂直堆疊 */
 @media (max-width: 800px) {
